--- a/EasyRent/app/src/main/AndroidManifest.xml
+++ b/EasyRent/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bdafahim.easyrent">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +23,8 @@
         <activity android:name=".Owner_Login" />
         <activity android:name=".SignUp" />
         <activity android:name=".UserProfile" />
-        <activity android:name=".OwnerProfile"></activity>
+        <activity android:name=".OwnerProfile" />
+        <activity android:name=".Post_Add"></activity>
     </application>
 
 </manifest>
