Owner can see his existing Posts
On the owner Profile Page if he clicks "Manage Post" butthon then he can see his existing Rent Post :alien:

--- a/EasyRent/app/src/main/AndroidManifest.xml
+++ b/EasyRent/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".SignUp" />
         <activity android:name=".UserProfile" />
         <activity android:name=".OwnerProfile" />
-        <activity android:name=".Post_Add"></activity>
+        <activity android:name=".Post_Add" />
+        <activity android:name=".Manage_Post"></activity>
     </application>
 
 </manifest>
