--- a/EasyRent/app/src/main/AndroidManifest.xml
+++ b/EasyRent/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserCatagory"></activity>
+        <activity android:name=".UserCatagory" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +38,9 @@
             android:name=".Search_trial"
             android:label="Map"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Search_Home"
+            android:label="Map"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
